# doom

./: Cargo.toml  LICENSE
src/: cli.rs  date.rs  doomsday.rs  iso_week_date.rs  lib.rs  main.rs
