[package]
name = "doom"
version = "0.1.0"
authors = ["Erich Meinig <emeinig@gmail.com>"]
description = "A program to find the day of the week for a date."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
